bug fixed : profanity filter whitespace bug fixed.

--- a/public/styles/partials/user.scss
+++ b/public/styles/partials/user.scss
@@ -75,7 +75,7 @@
     .title {
       width: 100%;
       padding-top: 10px;
-      @include color(0.35);
+      @include color(0.50);
       font-size: 14px;
       span {
 
